Fix modal display issue on iOS 11

--- a/src/assets/stylesheets/application.scss
+++ b/src/assets/stylesheets/application.scss
@@ -60,6 +60,11 @@
 
 @import 'main';
 
+.fixed-body {
+  position: fixed;
+  width: 100%;
+}
+
 img {
   image-orientation: from-image;
 }
