--- a/src/assets/stylesheets/information.scss
+++ b/src/assets/stylesheets/information.scss
@@ -9,6 +9,7 @@
 
 .information {
   .app-preview {
+    margin-top: 20px;
     max-height: 400px;
     width: auto;
     max-width: 100%;
@@ -248,6 +249,8 @@
 
         height: 80%;
 
+
+
         @media screen and (min-width: 768px) {
           height: auto;
           left: 50%;
@@ -269,18 +272,32 @@
 
         .header {
           text-transform: uppercase;
-          font-size: 32px;
+          font-size: 20px;
+
+          @media screen and (min-width: 768px) {
+            font-size: 32px;  
+          }
           font-weight: bold;
         }
 
         .subheader {
-          font-size: 19px;
+          font-size: 17px;
+
+          @media screen and (min-width: 768px) {
+            font-size: 19px;            
+          }
         }
 
         .text {
+          font-size: 16px;
+
           padding-top: 30px;
           padding-bottom: 10px;
-          font-size: 19px;
+
+          @media screen and (min-width: 768px) {
+            font-size: 19px;  
+          }
+          
           font-weight: lighter;
 
           ul {
@@ -328,19 +345,31 @@
       .card-overlay {
         height: 45%;
       }
+
+      .start-cta {
+        .text {
+          font-size: 14px;
+        }
+      }
     }
   }
 
   .know-more {
     color: white;
+    width: 100%;
     position: absolute;
     top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    width: auto;
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
+    transform: translateY(-50%);
+    
+    @media screen and (min-width: 768px) {
+      left: 50%;
+      transform: translate(-50%,-50%);  
+      width: auto !important;
+      width: -webkit-fit-content !important;
+      width: -moz-fit-content !important;
+      width: fit-content !important;
+    }
+   
 
     .header {
       font-weight: bold;
